# nova-bibliotheca-corviniana

./: README.md  manage.py  pyproject.toml
main_app/: models.py  urls.py  views.py
main_app/static/styles/: main.css
main_app/templates/: home.html
nova_bibliotheca_corviniana/: asgi.py  settings.py  urls.py  wsgi.py
