[tool.poetry]
name = "nova-bibliotheca-corviniana"
version = "0.1.0"
description = "capstone project"
authors = ["brian kasten <panphobicdream@gmail.com>"]
license = "proprietary"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.9"
psycopg2 = "^2.9.2"
django-ckeditor = "^6.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
